Incluida página base para geometría con canvas
Se incluyó el template para edición de geometría. En él se emplazó un
canvas y se incluyeron algunos botones como placeholders.

--- a/templates/wlabs/home.html
+++ b/templates/wlabs/home.html
@@ -16,6 +16,7 @@
             </a>
         </div>
     </section>
+    <a href="{% url 'geometry_edit' %}" class="btn btn-primary" >Geometria</a> 
 </main>
 
 {% endblock %}
