--- a/templates/wlabs/base.html
+++ b/templates/wlabs/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django CRUD Application</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type='text/css' media='screen' href="{% static 'styles/main.css' %}">
 </head>
 <body>
 
@@ -42,6 +44,8 @@
           </div>
         </div>
       </nav>
+
+      
     
     {% block content %}
     {% endblock %}
