Adaptada estructura de app aeropuerto
Se cambiaron algunos nombres de archivos, eliminaron propiedades de css
innecesarias, y algunos botones que no se usaban.

--- a/airport/static/styles/geometry.css
+++ b/airport/static/styles/geometry.css
@@ -1,3 +1,9 @@
+h2 {
+  text-align: center;
+  margin: auto;
+  background-color: #F9F9F9;
+  padding: 50px;
+}
 
 #canvasAerop {
   border: 2px solid gray;
@@ -19,12 +25,3 @@
   left: 330px;
 }
 
-#cnvBut1 {
-  top: 10px;
-} 
-#cnvBut2 {
-  top: 60px;
-}
-#cnvBut3 {
-  top: 110px;
-}
