--- a/templates/wlabs/home.html
+++ b/templates/wlabs/home.html
@@ -16,7 +16,7 @@
             </a>
         </div>
     </section>
-    <a href="{% url 'geometry_edit' %}" class="btn btn-primary" >Geometria</a>
+    <a href="{% url 'airport_edit' %}" class="btn btn-primary" >Airport</a>
     <a href="{% url 'fleets' %}" class="btn btn-primary" >Flota</a> 
 </main>
 
