Favicon and simulation navigation

--- a/airport/templates/airport/drawing_component.html
+++ b/airport/templates/airport/drawing_component.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 <script src="{% static 'geometry/geometry.js'%}" defer></script> 
-<link rel="stylesheet" type="text/css" href="{% static '../static/styles/geometry.css' %}"/>
-<h2>Welcome to the airport edition section</h2>
+<link rel="stylesheet" type="text/css" href="{% static 'styles/geometry.css' %}"/>
+<h3>Welcome to the airport edition section</h3>
 
 <div class="canvasContainer" onload="init()">
 <canvas id="canvasAerop" width="1200" height="700">
