--- a/templates/wlabs/home.html
+++ b/templates/wlabs/home.html
@@ -17,7 +17,8 @@
         </div>
     </section>
     <a href="{% url 'airport_edit' %}" class="btn btn-primary" >Airport</a>
-    <a href="{% url 'fleets' %}" class="btn btn-primary" >Flota</a> 
+    <a href="{% url 'fleets' %}" class="btn btn-primary" >Fleets</a>
+    <a href="{% url 'simulation' %}" class="btn btn-primary" >Simulation</a>  
 </main>
 
 {% endblock %}
