--- a/airport/templates/airport/drawing_component.html
+++ b/airport/templates/airport/drawing_component.html
@@ -5,6 +5,8 @@
 {% block content %}
 
 <script src="{% static 'geometry/geometry.js'%}" defer></script> 
+{{nodeList | json_script}}
+{{lineList | json_script}}
 <link rel="stylesheet" type="text/css" href="{% static 'styles/geometry.css' %}"/>
 <h3>Welcome to the airport edition section</h3>
 
