--- a/fleet/templates/fleet/fleet.html
+++ b/fleet/templates/fleet/fleet.html
@@ -6,41 +6,68 @@
 
 <script src="{% static 'fleet.js'%}" defer></script> 
 <link rel="stylesheet" type="text/css" href="{% static 'styles/fleet.css' %}"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <h3>Welcome to the fleet edition section</h3>
-<div>
-    <form action="/fleets/" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" class="btn btn-primary" value="Submit">
-    </form>
-</div>
 
-<br>
+<main class="container">
+    <section class="card mt-4 card-body d-flex flex-row align-items-center">
+        <div>
+            <form action="/fleets/" method="post">
+                {% csrf_token %}
+                {{ form }}
+                <input type="submit" class="btn btn-primary" value="Submit">
+            </form>
+        </div>
+    </section>
+    
+    <section class="card mt-4 card-body d-flex flex-col align-items-center">
+        <table id="aircrafts">
+            <tr>
+                <th colspan="5">
+                    <div class="d-flex flex-row">
+                        <div class="align-self-center flex-grow-1">Selected Fleet: {{selection}}</div>
+                        <button type="button" class="btn btn-secondary me-4"><i class="fa fa-plus"></i></button>
+                        <div class="align-self-center pe-4">Add Fleet</div>
+                    </div>
+                </th>
+                <th colspan="2">
+                    <div class="d-flex flex-row align-items-center justify-content-center">
+                        <button type="button" class="btn btn-secondary me-4"><i class="fa fa-plus"></i></button>
+                        <div class="align-self-center">Add Aircraft</div>
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th>Aircraft</th>
+                <th>ICAO Type Designator</th>
+                <th>Landing Speed [kt]</th>
+                <th>Landing Distance [m]</th>
+                <th>MTOW [kg]</th>
+                <th class="text-center">Quantity</th>
+                <th>Actions</th>
+            </tr>
+            {% for acft in fleet_aircrafts %}
+            <tr>
+                <td>{{acft.aircraft.name}}</th>
+                <td>{{acft.aircraft.icao_id}}</td>
+                <td>{{acft.aircraft.landing_speed}}</th>
+                <td>{{acft.aircraft.landing_distance}}</th>
+                <td>{{acft.aircraft.mtow}}</th>
+                <td class="d-flex flex-row input-group justify-content-center">
+                    <button class="input-group-text decrement-btn">-</i></button>
+                    <input id="qty" type="text" name="quantity" class="form-control text-center" value={{acft.quantity}}>
+                    <button class="input-group-text decrement-btn">+</i></button>
+                <td>
+                    <button type="button" class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o"></i></button>
+                    <button type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>
+                </td>
+            </tr>
+            {% endfor %}
+        </table> 
+    </section>
 
-<table id="aircrafts">
-    <tr>
-        <th colspan="7">Selected Fleet: {{selection}}</th>
-    </tr>
-    <tr>
-        <th>Aircraft</th>
-        <th>ICAO Type Designator</th>
-        <th>Landing Speed [kt]</th>
-        <th>Landing Distance [m]</th>
-        <th>MTOW [kg]</th>
-        <th>Quantity</th>
-        <th>Commands</th>
-    </tr>
-    {% for acft in fleet_aircrafts %}
-    <tr>
-        <td>{{acft.aircraft.name}}</th>
-        <td>{{acft.aircraft.icao_id}}</td>
-        <td>{{acft.aircraft.landing_speed}}</th>
-        <td>{{acft.aircraft.landing_distance}}</th>
-        <td>{{acft.aircraft.mtow}}</th>
-        <td>{{acft.quantity}}</th>
-        <td>'commands'</td>
-    </tr>
-    {% endfor %}
-</table> 
+</main>
+
+
 
 {% endblock %}
