--- a/fleet/templates/fleet/fleet.html
+++ b/fleet/templates/fleet/fleet.html
@@ -4,70 +4,64 @@
 
 {% block content %}
 
-<script src="{% static 'fleet.js'%}" defer></script> 
 <link rel="stylesheet" type="text/css" href="{% static 'styles/fleet.css' %}"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <h3>Welcome to the fleet edition section</h3>
 
 <main class="container">
-    <section class="card mt-4 card-body d-flex flex-row align-items-center">
-        <div>
-            <form action="/fleets/" method="post">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" class="btn btn-primary" value="Submit">
-            </form>
+    <section class="card mt-4 card-body">
+        <table id="aircrafts" class="table table-striped table-bordered table-sm">  
+            <thead class="thead-dark">  
+                <tr>  
+                    <th>Fleet Name</th>  
+                    <th>Fleet Description</th>
+                    <th>Actions</th>    
+                </tr>  
+            </thead>  
+            <tbody>  
+                {% for fleet in fleets %}  
+                <tr>  
+                    <td>{{ fleet.name }}</td>  
+                    <td>Content</td>  
+                    <td>  
+                        <a href="/update/{{fleet.id}}" type="button" class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o"></i></a>
+                        <a href="/delete/{{fleet.id}}" type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                    </td>  
+                </tr>  
+                {% endfor %}  
+            </tbody>  
+        </table>  
+        <div class="text-center">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Add New Fleet
+            </button>
+        </div>  
+    </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Create New Fleet</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                Here goes the New Fleet Form
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Create</button>
+                </div>
+            </div>
         </div>
-    </section>
-    
-    <section class="card mt-4 card-body d-flex flex-col align-items-center">
-        <table id="aircrafts">
-            <tr>
-                <th colspan="5">
-                    <div class="d-flex flex-row">
-                        <div class="align-self-center flex-grow-1">Selected Fleet: {{selection}}</div>
-                        <button type="button" class="btn btn-secondary me-4"><i class="fa fa-plus"></i></button>
-                        <div class="align-self-center pe-4">Add Fleet</div>
-                    </div>
-                </th>
-                <th colspan="2">
-                    <div class="d-flex flex-row align-items-center justify-content-center">
-                        <button type="button" class="btn btn-secondary me-4"><i class="fa fa-plus"></i></button>
-                        <div class="align-self-center">Add Aircraft</div>
-                    </div>
-                </th>
-            </tr>
-            <tr>
-                <th>Aircraft</th>
-                <th>ICAO Type Designator</th>
-                <th>Landing Speed [kt]</th>
-                <th>Landing Distance [m]</th>
-                <th>MTOW [kg]</th>
-                <th class="text-center">Quantity</th>
-                <th>Actions</th>
-            </tr>
-            {% for acft in fleet_aircrafts %}
-            <tr>
-                <td>{{acft.aircraft.name}}</th>
-                <td>{{acft.aircraft.icao_id}}</td>
-                <td>{{acft.aircraft.landing_speed}}</th>
-                <td>{{acft.aircraft.landing_distance}}</th>
-                <td>{{acft.aircraft.mtow}}</th>
-                <td class="d-flex flex-row input-group justify-content-center">
-                    <button class="input-group-text decrement-btn">-</i></button>
-                    <input id="qty" type="text" name="quantity" class="form-control text-center" value={{acft.quantity}}>
-                    <button class="input-group-text decrement-btn">+</i></button>
-                <td>
-                    <button type="button" class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o"></i></button>
-                    <button type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>
-                </td>
-            </tr>
-            {% endfor %}
-        </table> 
-    </section>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 
 </main>
 
-
-
 {% endblock %}
+
