fleet CRUD partially implemented

--- a/fleet/templates/fleet/acft_details.html
+++ b/fleet/templates/fleet/acft_details.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h3>VIEW TO DELETE ELEMENT</h3>
+<h3>VIEW TO SHOW AIRCRAFT CARD</h3>
 
 <h3>SELECTED ELEMENT: {{element}}</h3>
 
