--- a/fleet/templates/fleet/update.html
+++ b/fleet/templates/fleet/update.html
@@ -9,11 +9,13 @@
 
 <main class="container">
     <section class="card mt-4 card-body">
-        <div class="mb-4">
-            <label for="">Fleet Name:</label>
-            <input type="text" value={{fleet.name}}>
-            <a href="/emp" class="btn btn-primary">Save Fleet</a>
-            <a href="{% url 'fleets' %}" class="btn btn-primary">Return</a>
+        <div class="mb-4 d-flex flex-row  align-items-center">
+            <div class="me-5">Fleet Name: {{fleet.name}}</div>
+            <!-- Button trigger modal to change fleet name-->
+            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdropFleet">
+                Change Name
+            </button>
+            <a href="{% url 'fleets' %}" class="btn btn-danger ms-auto p-2">Return to Fleets</a>
         </div>
         <table id="aircrafts" class="table table-striped table-bordered table-sm">
             <tr>
@@ -34,22 +36,23 @@
                 <td>{{acft.aircraft.mtow}}</td>
                 <td>{{acft.quantity}}</td> 
                 <td>
-                    <a href="/update/update/{{acft.id}}" type="button" class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o"></i></a>
-                    <a href="/update/delete/{{acft.id}}/" type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                    <a href="/update/acft_details/{{acft.id}}" type="button" class="btn btn-primary btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Aircraft Data"><i class="fa fa-pie-chart"></i></a>
+                    <a href="/update/update/{{acft.id}}" type="button" class="btn btn-success btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Aircraft"><i class="fa fa-pencil-square-o"></i></a>
+                    <a href="/update/delete/{{acft.id}}/" type="button" class="btn btn-danger btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete Aircraft"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
             {% endfor %}
         </table>
         <div class="text-center">
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Add New Fleet
+            <!-- Button trigger modal to add new aircraft-->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdropAcft">
+                Add New Aircraft
             </button>
         </div>  
     </section> 
 
-    <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <!-- Modal to change aircraft -->
+    <div class="modal fade" id="staticBackdropAcft" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -57,11 +60,40 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                Here goes the New Aircraft Form
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="">
+                        <label for="floatingInput">Aircraft</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="">
+                        <label for="floatingInput">Quantity</label>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Add Aircraft</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal to change fleet name fleet -->
+    <div class="modal fade" id="staticBackdropFleet" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Change Fleet Name</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="" value="{{fleet.name}}">
+                        <label for="floatingInput">Fleet Name</label>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
                 </div>
             </div>
         </div>
