--- a/fleet/templates/fleet/fleet.html
+++ b/fleet/templates/fleet/fleet.html
@@ -53,7 +53,7 @@
                     <div class="modal-body">                 
 
                         <div class="form-floating mb-3">
-                            {{form.name}}
+                            {{fleet_form.name}}
                             <label for="floatingInput">Fleet Name</label>
                         </div>
 
