--- a/fleet/templates/fleet/update.html
+++ b/fleet/templates/fleet/update.html
@@ -36,8 +36,8 @@
                 <td>{{acft.aircraft.mtow}}</td>
                 <td>{{acft.quantity}}</td> 
                 <td>
-                    <a href="/update/acft_details/{{acft.id}}" type="button" class="btn btn-primary btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Aircraft Data"><i class="fa fa-pie-chart"></i></a>
-                    <a href="/update/update/{{acft.id}}" type="button" class="btn btn-success btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Aircraft"><i class="fa fa-pencil-square-o"></i></a>
+                    <a href="/update/acft_details/{{acft.id}}" type="button" class="btn btn-primary btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Aircraft Data"><i class="fa fa-pie-chart"></i></a>                 
+                    <a type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-placement="top" title="Edit Aircraft" data-bs-target="#staticBackdrop{{acft.id}}"><i class="fa fa-pencil-square-o"></i></a>
                     <a href="/update/delete/{{acft.id}}/" type="button" class="btn btn-danger btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete Aircraft"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
@@ -51,53 +51,101 @@
         </div>  
     </section> 
 
-    <!-- Modal to change aircraft -->
-    <div class="modal fade" id="staticBackdropAcft" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Add Aircraft to Fleet</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="">
-                        <label for="floatingInput">Aircraft</label>
+    <!-- Modal to add new aircraft -->
+    <form method="POST" action="/update/create/{{fleet.id}}">
+        {% csrf_token %}
+        <div class="modal fade" id="staticBackdropAcft" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Add New Aircraft</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="">
-                        <label for="floatingInput">Quantity</label>
+                    <div class="modal-body">
+
+                        <div class="form-floating mb-3">
+                            {{acft_form.aircraft}}
+                            <label for="floatingInput">{{acft_form.aircraft.label}}</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            {{acft_form.quantity}}
+                            <label for="floatingInput">{{acft_form.quantity.label}}</label>
+                        </div>
+                        
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Add Aircraft</button>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
+
+    <!-- Modal to change aircraft -->
+    {% for acft in fleet_aircrafts %}
+    <form method="POST" action="/update/update/{{acft.id}}">
+        {% csrf_token %}
+        <div class="modal fade" id="staticBackdrop{{acft.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Edit Aircfraft</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="form-floating mb-3">
+                            <p>{{acft.aircraft.name}}</p>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="number" name="quantity" class="form-control " id="floatingInput" placeholder="" required="" value="{{acft.quantity}}">
+                            <label for="floatingInput">{{acft_edit_form.quantity.label}}</label>
+                        </div>
+                    
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    {% endfor %}
 
     <!-- Modal to change fleet name fleet -->
-    <div class="modal fade" id="staticBackdropFleet" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Change Fleet Name</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="" value="{{fleet.name}}">
-                        <label for="floatingInput">Fleet Name</label>
+    <form method="POST" action="/update_name/{{fleet.id}}">
+        {% csrf_token %}
+        <div class="modal fade" id="staticBackdropFleet" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Change Fleet Name</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save</button>
+                    <div class="modal-body">                 
+                        
+                        <div class="form-floating mb-3">
+                            <p for="floatingInput">Previous Name: {{fleet.name}}</p>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="text" name="name" class="form-control " id="floatingInput" placeholder="" required="" value="{{fleet.name}}">
+                            <label for="floatingInput">{{fleet_form.name.label}}</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 
