Botón DB update y cambios simulación

--- a/fleet/templates/fleet/fleet.html
+++ b/fleet/templates/fleet/fleet.html
@@ -37,6 +37,7 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                 Add New Fleet
             </button>
+            <a href="/update_db" type="button" class="btn btn-primary">Launch DB Update</a>
         </div>  
     </section>
 
