--- a/airport/templates/airport/drawing_component.html
+++ b/airport/templates/airport/drawing_component.html
@@ -19,7 +19,7 @@
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#">
 Add New Link
 </button>
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#p">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNode">
 Add New Node
 </button>
 </div>
@@ -40,13 +40,12 @@ Add New Node
 		    <td>{{ link.description }}</td>  
                     <td>  
                         <a type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-placement="top" title="Edit Link" data-bs-target="#modalLink" data-bs-linkId="{{link.id}}"><i class="fa fa-pencil-square-o"></i></a>
-                        <a type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+			<a href="/airport/delete-link/{{link.id}}/" type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
                     </td>  
                 </tr>  
                 {% endfor %}  
             </tbody> 
         </table>  
-        </div>  
     </section>
 <section class="card mt-4 card-body">
         <table id="Nodes" class="table table-striped table-bordered table-sm">  
@@ -68,20 +67,19 @@ Add New Node
 		    <td>{{ node.y }}</td>  
                     <td>  
 		      <a type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-placement="top" title="Edit Node" data-bs-target="#modalNode" data-bs-nodeId="{{node.id}}"><i class="fa fa-pencil-square-o"></i></a>
-                        <a type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+		      <a href="/airport/delete-node/{{node.id}}/" type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
                     </td>  
                 </tr>  
                 {% endfor %}  
             </tbody>  
         </table>  
-        </div>  
     </section>
 
     <!-- Modal to change nodes -->
-    <form method="POST" name="nodeEditForm">
-        {% csrf_token %}
 	<div class="modal fade" id="modalNode" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalNodeLabel" aria-hidden="true">
-            <div class="modal-dialog">
+    <div class="modal-dialog">
+    <form method="POST" id="nodeModalForm">
+        {% csrf_token %}
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="staticBackdropLabel">Edit Node</h5>
@@ -90,29 +88,20 @@ Add New Node
                     <div class="modal-body">
 
                         <div class="form-floating mb-3">
-                            <p class="node-form-title"></p>
+			  <p class="node-form-title">{{node_form}}</p>
                         </div>
-
-
-                        <div class="form-floating mb-3">
-			    {{node_form.x}}
-                            <label for="floatingInput">{{node_form.x.label}}</label>
-                        </div>
-                        <div class="form-floating mb-3">
-			    {{node_form.y}}
-                            <label for="floatingInput">{{node_form.y.label}}</label>
-                        </div>
-
+                        
                    
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save</button>
+			<button type="submit"  class="btn btn-primary">Save</button>
+	
                     </div>
                 </div>
+    		</form>
             </div>
         </div>
-    </form>
 
     <!-- Modal to change links -->
     <form method="POST" >
@@ -154,19 +143,33 @@ Add New Node
 </main>
 
 <script>
+    //function formSubmit(){document.getElementById("nodeModalForm").submit();}
     let nodeModal =document.getElementById('modalNode');
+    let nodeForm = document.getElementById('nodeModalForm');
+    let x_input = nodeModal.querySelector("input[name='x']");
+    let y_input = nodeModal.querySelector("input[name='y']");
+    let z_input = nodeModal.querySelector("input[name='z']");
     nodeModal.addEventListener('show.bs.modal', function(event){
 	let button = event.relatedTarget;
 	let nodeNumber  = button.getAttribute('data-bs-nodeId')
-	const nodeData = JSON.parse(document.getElementById("nodeData").textContent);
-        let formTitle = nodeModal.querySelector(".node-form-title");
-	formTitle.textContent = nodeData[nodeNumber-1].type.toString();
-	x_input = nodeModal.querySelector("input[name='x']");
-	y_input = nodeModal.querySelector("input[name='y']");
-	x_input.value = nodeData[nodeNumber-1]['x'];
-	y_input.value = nodeData[nodeNumber-1]['y'];
-	document.nodeEditForm.action = "/aiport/update_node_"+nodeNumber.toString();
+	console.log("node Number = ", nodeNumber);
+	if (nodeNumber) {
+	  const nodeData = JSON.parse(document.getElementById("nodeData").textContent);
+	  //let formTitle = nodeModal.querySelector(".node-form-title");
+	  //formTitle.textContent = nodeData[nodeNumber-1].type.toString();
+	  x_input.value = nodeData[nodeNumber-1]['x'];
+	  y_input.value = nodeData[nodeNumber-1]['y'];
+	  z_input.value = nodeData[nodeNumber-1]['z'];
+	  nodeForm.action = "update-node/"+nodeNumber.toString()+"/";
+	} else {
+	  console.log("set action to create-node");
+	  x_input.value = 0; 
+	  y_input.value = 0;
+	  z_input.value = 0;
+	  nodeForm.action = "create-node/";
+	}
     });
+    /*
     let linkModal =document.getElementById('modalLink');
     linkModal.addEventListener('show.bs.modal', function(event){
 	let button = event.relatedTarget;
@@ -183,8 +186,8 @@ Add New Node
 	node1_select.value = linkData[linkNumber-1]['node1name'];
 	node2_select.value = linkData[linkNumber-1]['node2name'];
 	//width_input.value = linkData[linkNumber-1]['width'];
-	document.nodeEditForm.action = "/aiport/update_link_"+linkNumber.toString();
-    });
+	//document.nodeEditForm.action = "/aiport/update_link_"+linkNumber.toString();
+    });*/
 
 </script>
 
